--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
         run: python -m pip install --upgrade requests
       - name: 'Start Sign'
         env:
-          BDUSS: ${{ secrets.BDUSS }}
+          BDUSS: ${{ secrets.BDUSS.BDUSS }}
         run: python main.py
