--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
   tieba_sign:
     runs-on: ubuntu-latest
     steps:
+      - name: 'Set timezone'
+        uses: szenius/set-timezone@v1.0
+        with:
+          timezoneLinux: 'Asia/Shanghai'
       - name: 'Checkout codes'
         uses: actions/checkout@v2
       - name: 'Set python'
