--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,17 +6,19 @@ on:
       - main
   schedule:
     - cron: '5 16,22 * * *'
+  workflow_dispatch:
+
 
 jobs:
   tieba_sign:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout codes'
-        uses: actions/checkout@v2
-      - name: 'Set python'
-        uses: actions/setup-python@v1
+      - name: Checkout
+        uses: actions/checkout@v2.5.0
+      - name: Setup Python
+        uses: actions/setup-python@v2.3.3
         with:
-          python-version: '3.6'
+          python-version: '3.7'
       - name: 'Install dependencies'
         run: python -m pip install --upgrade requests
       - name: 'Start Sign'
