--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
       - main
   schedule:
     - cron: '5 16,22 * * *'
+  workflow_dispatch:
 
 jobs:
   tieba_sign:
@@ -16,7 +17,7 @@ jobs:
       - name: 'Set python'
         uses: actions/setup-python@v1
         with:
-          python-version: '3.6'
+          python-version: '3.8'
       - name: 'Install dependencies'
         run: python -m pip install --upgrade requests
       - name: 'Start Sign'
